Changes setting because old one was deprecated

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,6 +1,6 @@
 // Place your settings in this file to overwrite the default settings
 {
-    "editor.wrappingColumn": 0,
+    "editor.wordWrap": "on"
     "editor.renderWhitespace": "boundary",
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
