--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.find.seedSearchStringFromSelection": false,
     "editor.minimap.enabled": false,
     "editor.wordWrap": "on",
     "editor.renderWhitespace": "boundary",
