--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,6 +4,7 @@
         blr = "!git fetch; git branch -r --sort=authordate --no-merged master | head -10"
         co = "!git fetch; git checkout"
         lg = log --pretty=format:'%C(yellow)%h %Cred%ad %C(cyan)%an%Cgreen%d %Creset%s' --date=format:'%b %d'
+        sa = stash -u
         sl = "!git stash list --date=local --since=\"7 days ago\""
         st = "!git fetch; git status"
         ds = diff --staged
