--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "diffEditor.ignoreTrimWhitespace": false,
   "editor.bracketPairColorization.enabled": true,
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -43,6 +44,7 @@
     "*.vue": "vue"
   },
   "files.trimTrailingWhitespace": true,
+  "git.openDiffOnClick": false,
   "workbench.colorTheme": "Revelation (rainglow)",
   "workbench.editor.closeEmptyGroups": false,
   "workbench.editor.limit.enabled": true,
@@ -75,6 +77,5 @@
       "format": "md"
     }
   ],
-  "window.zoomLevel": 1,
-  "diffEditor.ignoreTrimWhitespace": false
+  "window.zoomLevel": 1
 }
